--- a/index.html
+++ b/index.html
@@ -1,18 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	
-	<title>WebGL example</title>
-	
-	<link rel="stylesheet" href="src/main.css">
-	
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>WebGL example</title>
 </head>
 <body>
-
-	<script src="src/main.ts"></script>
-
+  <canvas id="canvas"/>
+  <script src="dist/main.js"></script>
 </body>
 </html>
