Full width. Clear screen

--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link href="dist/main.css" rel="stylesheet">
   <title>WebGL example</title>
 </head>
 <body>
-  <canvas id="canvas"/>
+  <canvas id="canvas"></canvas>
   <script src="dist/main.js"></script>
 </body>
 </html>
