--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
   <title>WebGL example</title>
 </head>
 <body>
-  <canvas id="canvas"></canvas>
+  <div class="container">
+    <canvas id="canvas"></canvas>
+  </div>
   <script src="dist/main.js"></script>
 </body>
 </html>
